RR-2682 - Added 'Completed induction' section to the SAR report
