# src/main/kotlin/uk/gov/justice/digital/hmpps/educationandworkplanapi/app/resource/mapper/induction/InductionResourceMapper.kt
@@ -9,6 +9,7 @@ import uk.gov.justice.digital.hmpps.educationandworkplanapi.app.resource.mapper.
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.app.resource.mapper.actionplan.EmployabilitySkillsResourceMapper
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.app.service.ManageUserService
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.CreateInductionRequest
+import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.InductionCompletionMetadataResponse
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.InductionResponse
 import uk.gov.justice.digital.hmpps.educationandworkplanapi.resource.model.UpdateInductionRequest
 
@@ -77,6 +78,12 @@ class InductionResourceMapper(
         personalSkillsAndInterests = personalSkillsAndInterests?.let { skillsAndInterestsMapper.toPersonalSkillsAndInterestsResponse(it) },
         futureWorkInterests = futureWorkInterests?.let { workInterestsMapper.toFutureWorkInterestsResponse(it) },
         employabilitySkills = employabilitySkills.map { employabilitySkillsResourceMapper.fromModelToResponse(it) },
+        inductionCompletionMetadata = InductionCompletionMetadataResponse(
+          conductedBy = conductedBy,
+          conductedByRole = conductedByRole,
+          completedDate = completedDate,
+          notes = note?.content,
+        ),
         createdBy = createdBy!!,
         createdByDisplayName = userService.getUserDetails(createdBy!!).name,
         createdAt = instantMapper.toOffsetDateTime(createdAt)!!,
